07-load-fonts-solution-bonus

--- a/src/optimised/_base/load-fonts.html
+++ b/src/optimised/_base/load-fonts.html
@@ -29,6 +29,7 @@
 
     function onFontsLoaded() {
         document.documentElement.className += ' fonts-loaded';
+        cookie('fontsLoaded', 'true');
     }
 }(document));
 </script>
