09-load-css-solution

--- a/src/optimised/_base/load-css.html
+++ b/src/optimised/_base/load-css.html
@@ -1,8 +1,5 @@
-{# todo:
-   * load `/index.css` async for JS user-agents using `loadCSS` (https://github.com/filamentgroup/loadCSS).
-   * load `/index.css` blocking for non-JS user-agents.
-#}
-<link rel="stylesheet" href="/index.css">
+<noscript><link href="/index.css" rel="stylesheet"></noscript>
 <script data-load-css>
     {% include "assets/js/vendor/loadcss.min.js" %}
+    window.loadCSS('/index.css');
 </script>
