--- a/src/optimised/_base/load-css.html
+++ b/src/optimised/_base/load-css.html
@@ -1,5 +1,13 @@
 <noscript><link href="/index.css" rel="stylesheet"></noscript>
 <script data-load-css>
     {% include "assets/js/vendor/loadcss.min.js" %}
-    window.loadCSS('/index.css');
+    {% include "assets/js/vendor/onloadcss.min.js" %}
+
+    (function(window) {
+        var stylesheet = window.loadCSS( '/index.css' );
+        window.onloadCSS( stylesheet, function() {
+            console.log( 'Stylesheet has loaded.' );
+            cookie('fullCssLoaded', '/index.css', 365);
+        });
+    }(window));
 </script>
